data/derived/sp14/progs/unify/prog1578.ml.out
Characters 25-26:
  let _ = app (fun x-> x) [1;2;4];;
                           ^
Error: This expression has type int but an expression was expected of type
         unit
